sys/netinet6/in6_mcast.c
@@ -4708,6 +4708,7 @@ operator|>
 literal|0
 operator|)
 condition|)
+block|{
 name|CTR1
 argument_list|(
 name|KTR_MLD
@@ -4727,6 +4728,7 @@ index|]
 operator|.
 name|iss_asm
 expr_stmt|;
+block|}
 block|}
 comment|/* Increment ASM listener count on transition to ASM mode. */
 if|if
